<resources>
    <string name="app_name">在线订餐</string>

    <string name="title_section1">菜单</string>
    <string name="title_section2">历史订单</string>
    <string name="title_section3">个人中心</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_https_test">HttpsTestActivity</string>

    <string name="hello_world">Hello world!</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">账号</string>
    <string name="name">姓名</string>
    <string name="balance">余额</string>
    <string name="tel">电话</string>
    <string name="address">地址</string>
    <string name="logout">退出登录</string>
    <string name="no_login">请先登录</string>
    <string name="auth_timeout">身份过期，请重新登录</string>
    <string name="network_error">网络连接失败</string>
    <string name="login">登陆</string>
    <string name="auth_failed">密码错误，请重试</string>
    <string name="logout_success">退出登录成功</string>
    <string name="login_success">登陆成功</string>
    <string name="title_activity_login">登录</string>
    <string name="password">密码</string>
    <string name="register">注册</string>
    <string name="title_activity_register">注册</string>
    <string name="register_now">马上注册</string>
    <string name="login_or_register">登录/注册</string>
    <string name="password_confirm">确认密码</string>
    <string name="can_no_empty">不可为空</string>
    <string name="title_activity_update_user">修改信息</string>
    <string name="commit">提交</string>
    <string name="title_activity_order_confirm">订单确认</string>
    <string name="count">数量</string>
    <string name="commit_order">提交订单</string>
    <string name="total_price">总价</string>
    <string name="loading">加载中…</string>
    <string name="list_empty">列表为空</string>
    <string name="title_activity_order_detail">订单详情</string>
    <string name="time">下单时间</string>
    <string name="confirm_time">确认时间</string>
    <string name="send_time">送餐时间</string>
    <string name="cancel_order">取消订单</string>
    <string name="cancel_order_success">订单取消成功</string>
    <string name="insufficient_account_balance">用户余额不足</string>
    <string name="commit_order_success">订单提交成功</string>
    <string name="smscode">手机验证码</string>
    <string name="request_smscode_success">获取验证码成功</string>
    <string name="order_success_confirm">确认收货</string>
    <string name="order_success_confirm_success">订单确认成功</string>
</resources>
