<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nightwind.meal.activity.LoginRegisterActivity$PlaceholderFragment"
    android:layout_marginTop="16dp">

    <LinearLayout
        android:id="@+id/ll_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_button_press"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:textAppearance="@android:style/TextAppearance"
            android:text="@string/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/username"
            android:maxLength="20"
            android:layout_marginLeft="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_username"
        android:background="@drawable/list_button_press"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="16dp"
        android:orientation="horizontal">

        <TextView
            android:textAppearance="@android:style/TextAppearance"
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/password"
            android:layout_marginLeft="16dp"
            android:maxLength="20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="textPassword"/>

    </LinearLayout>

    <!--<TextView-->
        <!--android:id="@+id/register_now"-->
        <!--android:textColor="@color/holo_blue_light"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:layout_marginRight="16dp"-->
        <!--android:layout_below="@id/ll_password"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/register_now"/>-->

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/white"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:background="@drawable/button_login_press"
        android:text="@string/login"
        android:layout_below="@id/ll_password"/>


</RelativeLayout>
