<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.nightwind.meal.activity.OrderDetailActivity">


    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:id="@+id/rl_dish"
            android:background="@drawable/list_button_press"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ll_status_time"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textGray"
                    android:text="订单状态"/>

                <TextView
                    android:id="@+id/time"
                    android:layout_marginLeft="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2015-04-01 12:34:21"/>

            </LinearLayout>

            <RelativeLayout
                android:layout_marginTop="4dp"
                android:layout_below="@id/ll_status_time"
                android:id="@+id/rl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:id="@+id/icon"
                    android:src="@mipmap/ic_launcher"/>

                <TextView
                    android:layout_marginLeft="16dp"
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/icon"
                    android:text="hello world"
                    style="@android:style/TextAppearance.Medium"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/info"
                    android:text="@string/hello_world"
                    android:layout_below="@id/name"
                    android:layout_alignLeft="@id/name"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@android:style/TextAppearance.Medium"
                    android:textColor="@color/red_logout"
                    android:id="@+id/cost"
                    android:text="¥10"
                    android:layout_marginTop="4dp"
                    android:layout_below="@id/info"
                    android:layout_alignLeft="@id/info"/>

                <TextView
                    android:id="@+id/count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_marginLeft="8dp"
                    android:layout_toRightOf="@id/cost"
                    android:layout_alignTop="@id/cost"
                    android:text="共1份"/>


            </RelativeLayout>

            </RelativeLayout>



    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/card_view1"
        android:layout_below="@id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        android:layout_marginTop="16dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_button_press"
            android:id="@+id/lr_delivery">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp"
                android:paddingTop="16dp"
                android:id="@+id/lr_tel">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:text="@string/tel"
                    android:id="@+id/lb_tel"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:id="@+id/tel"
                    android:layout_toRightOf="@id/lb_tel"
                    android:layout_marginLeft="32dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingBottom="16dp"
                android:paddingTop="8dp"
                android:id="@+id/lr_address"
                android:layout_below="@id/lr_tel">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:text="@string/address"
                    android:id="@+id/lb_address"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:id="@+id/address"
                    android:layout_toRightOf="@id/lb_address"
                    android:layout_marginLeft="32dp"/>

            </RelativeLayout>


        </RelativeLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/card_view2"
        android:layout_below="@id/card_view1"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        android:layout_marginTop="16dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_button_press"
            android:id="@+id/lr_all_time">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp"
                android:paddingTop="16dp"
                android:id="@+id/lr_commit_time">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:text="@string/time"
                    android:id="@+id/lb_commit_time"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:id="@+id/commit_time"
                    android:layout_toRightOf="@id/lb_commit_time"
                    android:layout_marginLeft="32dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:id="@+id/lr_confirm_time"
                android:layout_below="@id/lr_commit_time">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:text="@string/confirm_time"
                    android:id="@+id/lb_confirm_time"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:id="@+id/confirm_time"
                    android:layout_toRightOf="@id/lb_confirm_time"
                    android:layout_marginLeft="32dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingBottom="16dp"
                android:paddingTop="8dp"
                android:id="@+id/lr_send_time"
                android:layout_below="@id/lr_confirm_time">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:text="@string/send_time"
                    android:id="@+id/lb_send_time"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:id="@+id/send_time"
                    android:layout_toRightOf="@id/lb_send_time"
                    android:layout_marginLeft="32dp"/>

            </RelativeLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@id/card_view2"
        android:id="@+id/cancel_order"
        android:text="@string/cancel_order"/>

</RelativeLayout>
